syntax = "proto3";
package raftservice;

//import "eraftpb.proto";

service RaftService {
  rpc RequestId(Empty) returns (IdRequestReponse) {}
  rpc ChangeConfig(ConfChange) returns (RaftResponse) {}
  rpc SendMessage(Message) returns (RaftResponse) {}
  rpc SendProposal(Proposal) returns (RaftResponse) {}
  rpc SendQuery(Query) returns (RaftResponse) {}
}

message ConfChange {
  bytes inner = 1;
}

message Message {
  bytes inner = 1;
}

enum ResultCode {
  Ok            = 0;
  Error         = 1;
  WrongLeader   = 2;
}

message Proposal {
  bytes inner = 1;
}

message Query {
  bytes inner = 1;
}

message IdRequestReponse{
  ResultCode code = 1;
  bytes data = 2;
}

message Empty {}

message Entry {
  uint64 key    = 1; 
  string value  = 2;
}

message RaftResponse {
  bytes inner = 2;
}
